tests/baselines/reference/assignmentCompatability38.errors.txt
==== tests/cases/compiler/assignmentCompatability38.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export var aa:{ new <string>(param: string); };;
        export var __val__aa = aa;
    }
    __test2__.__val__aa = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~
!!! assignmentCompatability38.ts(9,1): error TS2012: Cannot convert '__test1__.interfaceWithPublicAndOptional<number, string>' to 'new<string>(param: string) => any':
!!! 	Type 'new<string>(param: string) => any' requires a construct signature, but type '__test1__.interfaceWithPublicAndOptional<number, string>' lacks one.